--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -13,6 +13,7 @@
 		<div class="main-content">
 		
 			{{>header}}
+			<p>This site is created by Satyaki Bose. It uses data from mapbox.com and darksky.net</p>
 			<img class="potrait" src="/img/download.png">
 		</div>
 		{{>footer}}
